--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
+  "type": "module",
   "name": "kanban-app-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node --loader ts-node/esm src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,6 +14,13 @@
   "dependencies": {
     "apollo-server": "^3.12.0",
     "graphql": "^16.7.1",
+    "typescript": "^5.1.6",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.4.5",
+    "@types/uuid": "^9.0.2",
+    "esm": "^3.2.25",
+    "ts-node": "^10.9.1"
   }
 }
